--- a/arch/arm/dts/at91-sama5d27_som1_ek.dts
+++ b/arch/arm/dts/at91-sama5d27_som1_ek.dts
@@ -80,7 +80,7 @@
 		};
 
 		sdmmc0: sdio-host@a0000000 {
-			bus-width = <4>;
+			bus-width = <8>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_sdmmc0_cmd_dat_default &pinctrl_sdmmc0_ck_cd_default>;
 			status = "okay";
@@ -170,13 +170,18 @@
 							 <PIN_PA2__SDMMC0_DAT0>,
 							 <PIN_PA3__SDMMC0_DAT1>,
 							 <PIN_PA4__SDMMC0_DAT2>,
-							 <PIN_PA5__SDMMC0_DAT3>;
+							 <PIN_PA5__SDMMC0_DAT3>,
+							 <PIN_PA6__SDMMC0_DAT4>,
+							 <PIN_PA7__SDMMC0_DAT5>,
+							 <PIN_PA8__SDMMC0_DAT6>,
+							 <PIN_PA9__SDMMC0_DAT7>;
 						bias-pull-up;
 						u-boot,dm-pre-reloc;
 					};
 
 					pinctrl_sdmmc0_ck_cd_default: sdmmc0_ck_cd_default {
 						pinmux = <PIN_PA0__SDMMC0_CK>,
+							 <PIN_PA10__SDMMC0_RSTN>,
 							 <PIN_PA13__SDMMC0_CD>;
 						bias-disable;
 						u-boot,dm-pre-reloc;
