--- a/board/atmel/sama5d27_som1_m5/Kconfig
+++ b/board/atmel/sama5d27_som1_m5/Kconfig
@@ -4,7 +4,7 @@ config SYS_BOARD
 	default "sama5d27_som1_m5"
 
 config SYS_VENDOR
-	default "altronix"
+	default "atmel"
 
 config SYS_SOC
 	default "at91"
