--- a/arch/arm/dts/at91-sama5d27_som1_m5.dts
+++ b/arch/arm/dts/at91-sama5d27_som1_m5.dts
@@ -1,5 +1,5 @@
 /*
- * at91-sama5d27_som1_ek.dts - Device Tree file for SAMA5D27 SOM1 EK board
+ * at91-sama5d27_som1_m5.dts - Device Tree file for SAMA5D27 SOM1 EK board
  *
  *  Copyright (C) 2017 Microchip Corporation
  *                     Wenyou Yang <wenyou.yang@microchip.com>
@@ -47,7 +47,7 @@
 
 / {
 	model = "Atmel SAMA5D27 SOM1 EK";
-	compatible = "atmel,sama5d27-som1-ek", "atmel,sama5d2", "atmel,sama5";
+	compatible = "atmel,sama5d27-som1-m5", "atmel,sama5d2", "atmel,sama5";
 
 	chosen {
 		u-boot,dm-pre-reloc;
