--- a/configs/sama5d27_som1_m5_nandflash_defconfig
+++ b/configs/sama5d27_som1_m5_nandflash_defconfig
@@ -1,7 +1,7 @@
 CONFIG_ARM=y
 CONFIG_ARCH_AT91=y
 CONFIG_SYS_TEXT_BASE=0x26f00000
-CONFIG_TARGET_SAMA5D2_PTC_EK=y
+CONFIG_TARGET_SAMA5D27_SOM1_M5=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 CONFIG_DEBUG_UART_BOARD_INIT=y
 CONFIG_DEBUG_UART_BASE=0xf801c000
@@ -31,7 +31,7 @@ CONFIG_CMD_PING=y
 CONFIG_CMD_EXT4=y
 CONFIG_CMD_FAT=y
 CONFIG_OF_CONTROL=y
-CONFIG_DEFAULT_DEVICE_TREE="at91-sama5d2_ptc_ek"
+CONFIG_DEFAULT_DEVICE_TREE="at91-sama5d27_som1_m5"
 CONFIG_ENV_IS_IN_NAND=y
 CONFIG_DM=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
