add double_copy to double copy defconfig

--- a/configs/sama5d27_som1_m5_double_copy_defconfig
+++ b/configs/sama5d27_som1_m5_double_copy_defconfig
@@ -2,6 +2,7 @@ CONFIG_ARM=y
 CONFIG_ARCH_AT91=y
 CONFIG_SYS_TEXT_BASE=0x26f00000
 CONFIG_TARGET_SAMA5D27_SOM1_M5=y
+CONFIG_DOUBLE_COPY=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 CONFIG_DEBUG_UART_BOARD_INIT=y
 CONFIG_DEBUG_UART_BASE=0xf801c000
